Мелкие исправления в html (2-html)

--- a/2 html/2html.html
+++ b/2 html/2html.html
@@ -19,19 +19,19 @@
                     </p>
                 </div>
                 <div class="registerend">
-                    <form action="">
-                        <textarea name="" id="">Моя компания</textarea>
+                    <form action="/text">
+                        <textarea name="text" id="textarea">Моя компания</textarea>
                         <br>
-                        <input type="text" name="" id="t1" placeholder="Имя">
-                        <input type="text" name="" id="t2" placeholder="Фамилия">
+                        <input type="text" name="name" id="t1" placeholder="Имя">
+                        <input type="text" name="sername" id="t2" placeholder="Фамилия">
                         <br>
-                        <input type="email" name="" id="t3" placeholder="E-mail">
+                        <input type="email" name="e-mail" id="t3" placeholder="E-mail">
                         <br>
                         <div class="register_buttom">
                             <a href="http://">Зарегистрироваться</a>
                             <img src="img/arrow.png" alt="" width="30">
                         </div>
-                        <input type="checkbox" name="" id="t4">
+                        <input type="checkbox" name="agree" id="t4">
                         <label for="">Я прочитал и принимаю <a href="http://">Условия использования</a></label>
                     </form>
                 </div>
