--- a/1 html/1html.html
+++ b/1 html/1html.html
@@ -10,27 +10,25 @@
     <header>
         <nav>
             <div class="menu">
-                <div class="menu_conteiner">
-                    <div class="menu_flex">
-                        <ul class="menu_inner">
-                            <li>
-                                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/icon.ico" alt="" width="50">
-                                <span style="position: relative;bottom: 16px;">Мой блог</span></a>
-                            </li>
-                            <li>
-                                <a href="http://" target="_blank" rel="noopener noreferrer">HTML и CSS</a>
-                            </li>
-                            <li>
-                                <a href="http://" target="_blank" rel="noopener noreferrer">Frontend</a>
-                            </li>
-                            <li>
-                                <a href="http://" target="_blank" rel="noopener noreferrer">Backend</a>
-                            </li>
-                        </ul>
-                        <div class="menu_search">
-                            <h4>Поиск:</h4>
-                            <input type="search" name="" id="">
-                        </div>
+                <div class="conteiner">
+                    <ul class="menu_inner">
+                        <li>
+                            <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/icon.ico" alt="" width="50">
+                            <span style="position: relative;bottom: 16px;">Мой блог</span></a>
+                        </li>
+                        <li>
+                            <a href="http://" target="_blank" rel="noopener noreferrer">HTML и CSS</a>
+                        </li>
+                        <li>
+                            <a href="http://" target="_blank" rel="noopener noreferrer">Frontend</a>
+                        </li>
+                        <li>
+                            <a href="http://" target="_blank" rel="noopener noreferrer">Backend</a>
+                        </li>
+                    </ul>
+                    <div class="menu_search">
+                        <h4>Поиск:</h4>
+                        <input type="search" name="" id="">
                     </div>
                 </div>
             </div>
@@ -38,56 +36,52 @@
     </header>
     <main>
         <div class="text">
-            <div class="text_conteiner">
-                <div class="text_flex">
-                    <div class="textstart_inner">
-                        <div class="one">
-                            <h4>
-                                FRONTEND
-                            </h4>
-                            <ul>
-                                <li>
-                                    8 октября 2024
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="two">
-                            Теория цвета - как цвет влияет на поведение <br> потребителей
-                        </div>
-                        <div class="three">
-                            <div>
-                                <img src="img/iam.jpg" alt="" width="100">
-                            </div>
-                            <ul>
-                                <li>
-                                    Вередюков Владимир
-                                </li>
-                                <li>
-                                    Разработчик
-                                </li>
-                            </ul>
-                        </div>
+            <div class="conteiner">
+                <div class="textstart_inner">
+                    <div class="one">
+                    <h4>
+                            FRONTEND
+                        </h4>
+                    <p>
+                        8 октября 2024
+                    </p>
                     </div>
-                    <div class="textend">
+                    <div class="two">
+                        Теория цвета - как цвет влияет на поведение <br> потребителей
+                    </div>
+                    <div class="three">
                         <div>
-                            <img src="img/colors.jpg" alt="" width="950">
+                            <img src="img/iam.jpg" alt="" width="100">
                         </div>
-                        <div>
-                            <p>
-                                Теория цвета — это особенности эмоционального восприятия человеком тех или иных цветовых решений. Цвета и различные их комбинации влияют на психику человека, а значит, во многом определяют его поведение. Маркетологи и веб-дизайнеры хорошо знают, что правильно подобранная цветовая гамма сайта помогает привлечь и удержать внимание пользователей, сформировать положительное отношение к продукту, подтолкнуть посетителей к совершению целевых действий, повысить конверсию.
-                            </p>
-                            <p>
-                                <span style="font-size: 15px;">Универсального ответа на вопрос, как тот или иной цвет влияет на разных людей, нет. Эмоциональная и поведенческая реакция каждого человека зависит от личного опыта. Вместе с тем можно выделить определенные закономерности влияния цветов на поведение пользователей.</span>
+                        <ul>
+                            <li>
+                                Вередюков Владимир
+                            </li>
+                            <li>
+                                Разработчик
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="textend">
+                    <div>
+                        <img src="img/colors.jpg" alt="" width="950">
+                    </div>
+                    <div>
+                        <p>
+                            Теория цвета — это особенности эмоционального восприятия человеком тех или иных цветовых решений. Цвета и различные их комбинации влияют на психику человека, а значит, во многом определяют его поведение. Маркетологи и веб-дизайнеры хорошо знают, что правильно подобранная цветовая гамма сайта помогает привлечь и удержать внимание пользователей, сформировать положительное отношение к продукту, подтолкнуть посетителей к совершению целевых действий, повысить конверсию.
+                        </p>
+                        <p>
+                            <span style="font-size: 15px;">Универсального ответа на вопрос, как тот или иной цвет влияет на разных людей, нет. Эмоциональная и поведенческая реакция каждого человека зависит от личного опыта. Вместе с тем можно выделить определенные закономерности влияния цветов на поведение пользователей.</span>
                             </p>
                             <p>
                                 <span style="font-size: 15px;"><a href="https://habr.com/ru/articles/831836/" target="_blank" rel="noopener noreferrer">В исследовании «Влияние цвета на маркетинг» (Impact of color on marketing)</a> говорится, что использование разных цветов может существенно влиять на настроение и поведение потребителей. Утверждается, что от 60 до 90% покупателей (в зависимости от категории продукта) дают положительную или отрицательную оценку товару, основываясь только на его цвете.</span>
-                            </p>
-                        </div>
-                        <div>
-                            <h4>
-                                Все права защищены (c) 2024
-                            </h4>
-                        </div>
+                        </p>
+                    </div>
+                    <div>
+                        <h4>
+                            Все права защищены (c) 2024
+                        </h4>
                     </div>
                 </div>
             </div>
