Исправления но еще в процессе

--- a/1 html/1html.html
+++ b/1 html/1html.html
@@ -53,14 +53,14 @@
                         <div>
                             <img src="img/iam.jpg" alt="" width="100">
                         </div>
-                        <ul>
-                            <li>
-                                Вередюков Владимир
-                            </li>
-                            <li>
+                        <div>
+                            <p>
+                                Вередюков Владимир 
+                            </p>
+                            <p>
                                 Разработчик
-                            </li>
-                        </ul>
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div class="textend">
