--- a/1 html/1html.html
+++ b/1 html/1html.html
@@ -41,49 +41,45 @@
                     <div class="one">
                     <h4>
                             FRONTEND
-                        </h4>
+                    </h4>
                     <p>
                         8 октября 2024
                     </p>
                     </div>
                     <div class="two">
-                        Теория цвета - как цвет влияет на поведение <br> потребителей
+                        <h3>
+                            Теория цвета - как цвет влияет на поведение <br> потребителей
+                        </h3>
                     </div>
                     <div class="three">
                         <div>
                             <img src="img/iam.jpg" alt="" width="100">
                         </div>
                         <div>
-                            <p>
+                            <p id="vv">
                                 Вередюков Владимир 
                             </p>
-                            <p>
+                            <p id="razrabcolor">
                                 Разработчик
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="textend">
-                    <div>
-                        <img src="img/colors.jpg" alt="" width="950">
-                    </div>
-                    <div>
-                        <p>
+                    <img src="img/colors.jpg" alt="" width="950">
+                    <p>
                             Теория цвета — это особенности эмоционального восприятия человеком тех или иных цветовых решений. Цвета и различные их комбинации влияют на психику человека, а значит, во многом определяют его поведение. Маркетологи и веб-дизайнеры хорошо знают, что правильно подобранная цветовая гамма сайта помогает привлечь и удержать внимание пользователей, сформировать положительное отношение к продукту, подтолкнуть посетителей к совершению целевых действий, повысить конверсию.
-                        </p>
-                        <p>
-                            <span style="font-size: 15px;">Универсального ответа на вопрос, как тот или иной цвет влияет на разных людей, нет. Эмоциональная и поведенческая реакция каждого человека зависит от личного опыта. Вместе с тем можно выделить определенные закономерности влияния цветов на поведение пользователей.</span>
-                            </p>
-                            <p>
-                                <span style="font-size: 15px;"><a href="https://habr.com/ru/articles/831836/" target="_blank" rel="noopener noreferrer">В исследовании «Влияние цвета на маркетинг» (Impact of color on marketing)</a> говорится, что использование разных цветов может существенно влиять на настроение и поведение потребителей. Утверждается, что от 60 до 90% покупателей (в зависимости от категории продукта) дают положительную или отрицательную оценку товару, основываясь только на его цвете.</span>
-                        </p>
-                    </div>
-                    <div>
-                        <h4>
-                            Все права защищены (c) 2024
-                        </h4>
-                    </div>
-                </div>
+                    </p>
+                    <p>
+                        <span style="font-size: 16px;">Универсального ответа на вопрос, как тот или иной цвет влияет на разных людей, нет. Эмоциональная и поведенческая реакция каждого человека зависит от личного опыта. Вместе с тем можно выделить определенные закономерности влияния цветов на поведение пользователей.</span>
+                    </p>
+                    <p>
+                        <span style="font-size: 15px;"><a href="https://habr.com/ru/articles/831836/" target="_blank" rel="noopener noreferrer">В исследовании «Влияние цвета на маркетинг» (Impact of color on marketing)</a> говорится, что использование разных цветов может существенно влиять на настроение и поведение потребителей. Утверждается, что от 60 до 90% покупателей (в зависимости от категории продукта) дают положительную или отрицательную оценку товару, основываясь только на его цвете.</span>
+                    </p>
+                    <h4 style="color: gray;">
+                        Все права защищены (c) 2024
+                    </h4>
+                </div
             </div>
         </div>
     </main>
