Поменял названия файлов как ты сказал, я даже не заметил что у меня папка с пробелом

--- a/1html/index.html
+++ b/1html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Статья</title>
-    <link rel="stylesheet" href="1html.css">
+    <link rel="stylesheet" href="1css.css">
 </head>
 <body>
     <header>
