Поработал немного с разметкой и media

--- a/1html/index.html
+++ b/1html/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Статья</title>
-    <link rel="stylesheet" href="1css.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="menu">
-                <div class="conteiner">
+                <div class="container">
                     <ul class="menu_inner">
                         <li>
                             <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/icon.ico" alt="" width="50">
@@ -27,8 +27,9 @@
                         </li>
                     </ul>
                     <div class="menu_search">
-                        <h4>Поиск:</h4>
-                        <input type="search" name="" id="">
+                        <form action="./search" method="get">
+                            <input type="search" name="searchid" id="searchid" placeholder="Поиск">
+                        </form>
                     </div>
                 </div>
             </div>
@@ -36,7 +37,7 @@
     </header>
     <main>
         <div class="text">
-            <div class="conteiner">
+            <div class="container">
                 <div class="textstart_inner">
                     <div class="one">
                     <h4>
@@ -68,7 +69,7 @@
                 <div class="textend">
                     <img src="img/colors.jpg" alt="" width="950">
                     <p>
-                            Теория цвета — это особенности эмоционального восприятия человеком тех или иных цветовых решений. Цвета и различные их комбинации влияют на психику человека, а значит, во многом определяют его поведение. Маркетологи и веб-дизайнеры хорошо знают, что правильно подобранная цветовая гамма сайта помогает привлечь и удержать внимание пользователей, сформировать положительное отношение к продукту, подтолкнуть посетителей к совершению целевых действий, повысить конверсию.
+                        Теория цвета — это особенности эмоционального восприятия человеком тех или иных цветовых решений. Цвета и различные их комбинации влияют на психику человека, а значит, во многом определяют его поведение. Маркетологи и веб-дизайнеры хорошо знают, что правильно подобранная цветовая гамма сайта помогает привлечь и удержать внимание пользователей, сформировать положительное отношение к продукту, подтолкнуть посетителей к совершению целевых действий, повысить конверсию.
                     </p>
                     <p>
                         <span style="font-size: 16px;">Универсального ответа на вопрос, как тот или иной цвет влияет на разных людей, нет. Эмоциональная и поведенческая реакция каждого человека зависит от личного опыта. Вместе с тем можно выделить определенные закономерности влияния цветов на поведение пользователей.</span>
@@ -79,7 +80,7 @@
                     <h4 style="color: gray;">
                         Все права защищены (c) 2024
                     </h4>
-                </div
+                </div>
             </div>
         </div>
     </main>
