доверстать блог сайта

--- a/index.html
+++ b/index.html
@@ -55,5 +55,178 @@
             <img src="img/kusr_logo.png" alt="">
         </section>
     </header>
+    <main class="main__blog">
+        <div class="main__blog__div__one">
+            <p class="main__blog__div__one__p">
+                Блог и социальные сети
+            </p>
+            <h2 class="main__blog__div__one__h2">
+                Полезные материалы
+            </h2>
+            <p class="main__blog__div__one__p_rep">
+                Каждую неделю мы публикуем новости, обновления, а так же дополнительные полезные <br> материалы в социальных сетях:
+            </p>
+            <div class="main__blog__div__one__ul">
+                <div class="main__blog__ul">
+                    <a href="#"><img src="img/youtube.png" alt=""></a>
+                </div>
+                <div class="main__blog__ul">
+                    <a href="#"><img src="img/tele2.png" alt="">
+                    </div></a>
+                <div class="main__blog__ul">
+                    <a href="#"><img src="img/vk.png" alt="">
+                    </div></a>
+            </div>
+        </div>
+        <div class="main__blog__div__two">
+            <div class="main__blog__ul_">
+                <div class="main__blog__ul__left">
+                    <div class="main__blog__ul__left__logos">
+                        <div class="inline_flex">
+                            <img src="img/Calendar.svg" alt="">
+                            <p>
+                                06 мая 2023
+                            </p>
+                        </div>
+                        <div class="inline_flex">
+                            <img src="img/Eye.svg" alt="">
+                            <p>
+                                2 584 просмотра
+                            </p>
+                        </div>
+                    </div>
+                    <div class="main__blog__ul__left__h2">
+                        <h2>
+                            Критика в работе – ваш друг, но не всегда
+                        </h2>
+                    </div>
+                    <div class="main__blog__ul__left__p">
+                        Когда делаешь код ревью иногда встречаешь с тем, что даешь конструктивную критику и она воспринимается в штыки, словно это личное оскорбление. Человек всеми силами пытается сопротивляться обратной связи и не готов слушать аргументы. Тут варианта два: или обратная связь дана некорректно, или человек не воспринимает критику. В этом посте я хочу сосредоточиться на том, как работать с критикой.
+                    </div>
+                </div>
+                <div class="main__blog__ul__right">
+                    <a href="#">Читать</a>
+                </div>
+            </div>
+            <div class="main__blog__ul_">
+                <div class="main__blog__ul__left">
+                    <div class="main__blog__ul__left__logos">
+                        <p>
+                            <img src="" alt="">
+                                06 мая 2023
+                        </p>
+                        <p>
+                            <img src="" alt="">
+                                2 584 просмотра
+                        </p>
+                    </div>
+                    <div class="main__blog__ul__left__h2">
+                        <h2>
+                            Критика в работе – ваш друг, но не всегда
+                        </h2>
+                    </div>
+                    <div class="main__blog__ul__left__p">
+                        Когда делаешь код ревью иногда встречаешь с тем, что даешь конструктивную критику и она воспринимается в штыки, словно это личное оскорбление. Человек всеми силами пытается сопротивляться обратной связи и не готов слушать аргументы. Тут варианта два: или обратная связь дана некорректно, или человек не воспринимает критику. В этом посте я хочу сосредоточиться на том, как работать с критикой.
+                    </div>
+                </div>
+                <div class="main__blog__ul__right">
+                    <a href="#">Читать</a>
+                </div>
+            </div>
+            <div class="main__blog__ul_">
+                <div class="main__blog__ul__left">
+                    <div class="main__blog__ul__left__logos">
+                        <p>
+                            <img src="" alt="">
+                                06 мая 2023
+                        </p>
+                        <p>
+                            <img src="" alt="">
+                                2 584 просмотра
+                        </p>
+                    </div>
+                    <div class="main__blog__ul__left__h2">
+                        <h2>
+                            Критика в работе – ваш друг, но не всегда
+                        </h2>
+                    </div>
+                    <div class="main__blog__ul__left__p">
+                        Когда делаешь код ревью иногда встречаешь с тем, что даешь конструктивную критику и она воспринимается в штыки, словно это личное оскорбление. Человек всеми силами пытается сопротивляться обратной связи и не готов слушать аргументы. Тут варианта два: или обратная связь дана некорректно, или человек не воспринимает критику. В этом посте я хочу сосредоточиться на том, как работать с критикой.
+                    </div>
+                </div>
+                <div class="main__blog__ul__right">
+                    <a href="#">Читать</a>
+                </div>
+            </div>
+        </div>
+        <div class="main__blog__footer">
+            <a href="#">Все публикации</a>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="footer__top">
+            <div class="footer__top__logo">
+                <img src="img/PSlogo.png" alt="">
+            </div>
+            <div class="footer__top__links">
+                <img src="img/links.png" alt="">
+            </div>
+        </div>
+        <div class="footer__midle">
+            <div class="footer__midle__menu">
+                <p>
+                    Меню
+                </p>
+                <ul>
+                    <li>
+                        <a href="#">Курсы</a>
+                    </li>
+                    <li>
+                        <a href="#">О школе</a>
+                    </li>
+                    <li>
+                        <a href="#">Блог</a>
+                    </li>
+                    <li>
+                        <a href="#">База знаний</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__midle__docs">
+                <p>
+                    Документы
+                </p>
+                <ul>
+                    <li>
+                        <a href="#">Договор Оферта</a>
+                    </li>
+                    <li>
+                        <a href="#">Политика конфиденциальности</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__midle__recs">
+                <p>
+                    Реквизиты
+                </p>
+                <ul>
+                    <li>
+                        <a href="#">ИП Ларичев Антон Андреевич</a>
+                    </li>
+                    <li>
+                        <a href="#">ИНН 773373765379</a>
+                    </li>
+                    <li>
+                        <a href="#">contact@purpleschool.ru</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer__end">
+            <p>
+                PurpleSchool © 2020 - 2023 Все права защищены
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
