исправил padding и margin, названия классов, добавил footer и width

--- a/1html/index.html
+++ b/1html/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Статья</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <header>
@@ -39,7 +41,7 @@
         <div class="text">
             <div class="container">
                 <div class="textstart_inner">
-                    <div class="one">
+                    <div class="text__title">
                     <h4>
                             FRONTEND
                     </h4>
@@ -47,12 +49,12 @@
                         8 октября 2024
                     </p>
                     </div>
-                    <div class="two">
+                    <div class="text__heading">
                         <h3>
                             Теория цвета - как цвет влияет на поведение <br> потребителей
                         </h3>
                     </div>
-                    <div class="three">
+                    <div class="text__logo_and_last_names">
                         <div>
                             <img src="img/iam.jpg" alt="" width="100">
                         </div>
@@ -68,21 +70,23 @@
                 </div>
                 <div class="textend">
                     <img src="img/colors.jpg" alt="" width="950">
-                    <p>
+                    <p class="textend__p_start">
                         Теория цвета — это особенности эмоционального восприятия человеком тех или иных цветовых решений. Цвета и различные их комбинации влияют на психику человека, а значит, во многом определяют его поведение. Маркетологи и веб-дизайнеры хорошо знают, что правильно подобранная цветовая гамма сайта помогает привлечь и удержать внимание пользователей, сформировать положительное отношение к продукту, подтолкнуть посетителей к совершению целевых действий, повысить конверсию.
                     </p>
-                    <p>
-                        <span style="font-size: 16px;">Универсального ответа на вопрос, как тот или иной цвет влияет на разных людей, нет. Эмоциональная и поведенческая реакция каждого человека зависит от личного опыта. Вместе с тем можно выделить определенные закономерности влияния цветов на поведение пользователей.</span>
+                    <p class="textend__p_midle">
+                        Универсального ответа на вопрос, как тот или иной цвет влияет на разных людей, нет. Эмоциональная и поведенческая реакция каждого человека зависит от личного опыта. Вместе с тем можно выделить определенные закономерности влияния цветов на поведение пользователей.
                     </p>
-                    <p>
-                        <span style="font-size: 15px;"><a href="https://habr.com/ru/articles/831836/" target="_blank" rel="noopener noreferrer">В исследовании «Влияние цвета на маркетинг» (Impact of color on marketing)</a> говорится, что использование разных цветов может существенно влиять на настроение и поведение потребителей. Утверждается, что от 60 до 90% покупателей (в зависимости от категории продукта) дают положительную или отрицательную оценку товару, основываясь только на его цвете.</span>
+                    <p class="textend__p_end">
+                        <a href="https://habr.com/ru/articles/831836/" target="_blank" rel="noopener noreferrer">В исследовании «Влияние цвета на маркетинг» (Impact of color on marketing)</a> говорится, что использование разных цветов может существенно влиять на настроение и поведение потребителей. Утверждается, что от 60 до 90% покупателей (в зависимости от категории продукта) дают положительную или отрицательную оценку товару, основываясь только на его цвете.
                     </p>
-                    <h4 style="color: gray;">
-                        Все права защищены (c) 2024
-                    </h4>
                 </div>
             </div>
         </div>
     </main>
+    <footer>
+        <h4 class="footer">
+            Все права защищены (c) 2024
+        </h4>
+    </footer>
 </body>
 </html>
