--- a/final/src/index.html
+++ b/final/src/index.html
@@ -9,6 +9,53 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <section class="main-section">
+        <div class="container main-section__header">
+            <div class="main_section__title-logo logo">
+                <img src="./img/finio.png" alt="Основное лого">
+            </div>
+            <nav class="main-section__nav navigation">
+                <ul class="navigation__ul">
+                    <li><a href="#">Возможности</a></li>
+                    <li><a href="#">Тарифы</a></li>
+                    <li><a href="#">Отзывы</a></li>
+                    <li><a href="#">Поддержка клинтов</a></li>
+                </ul>
+            </nav>
+            <div class="main-section__personal-account personal-account">
+                <button class="personal-account__button">
+                    Личный кабинет
+                </button>
+            </div>
+        </div>
+        <div class="container main-section__text-and-logo">
+            <div class="main-section__left-finance left-finance">
+                <div class="main-section__finance finance">
+                    <h2 class="finance__h2">
+                        Простой финансовый учёт для продавцов на маркетплейсах
+                    </h2>
+                </div>
+                <div class="main-section__try-for-free try-for-free">
+                    <button class="try-for-free__button">
+                        Попробовать 14 дней бесплатно
+                    </button>
+                </div>
+                <div class="main-section__finance-icons">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="main-section__right-finance right-finance">
+                <div class="main-section__computer-logo computer-logo">
+                    <img src="./img/computer-logo.png" alt="Основное лого компютера посередине сайта" class="computer-logo__outside">
+                    <img src="./img/report.png" alt="Информация внутри фото компьютера" class="computer-logo__inside">
+                </div>
+            </div>
+        </div>
+        <div class="container main-section__functions">
+            <div class="functions__flex">
+                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
