--- a/final/src/index.html
+++ b/final/src/index.html
@@ -24,24 +24,24 @@
             </nav>
             <div class="main-section__personal-account personal-account">
                 <button class="personal-account__button">
-                    Личный кабинет
+                    <a href="#">Личный кабинет</a>
                 </button>
             </div>
         </div>
         <div class="container main-section__text-and-logo">
             <div class="main-section__left-finance left-finance">
-                <div class="main-section__finance finance">
-                    <h2 class="finance__h2">
-                        Простой финансовый учёт для продавцов на маркетплейсах
+                <div class="main-section__finance finance-text">
+                    <h2 class="finance-text__h2">
+                        Простой финансовый <br> учёт для продавцов на <br> маркетплейсах
                     </h2>
                 </div>
                 <div class="main-section__try-for-free try-for-free">
                     <button class="try-for-free__button">
-                        Попробовать 14 дней бесплатно
+                        <a href="#">Попробовать 14 дней бесплатно</a>
                     </button>
                 </div>
                 <div class="main-section__finance-icons">
-                    <img src="" alt="">
+                    <img src="./icons/brands.png" alt="иконки брендов">
                 </div>
             </div>
             <div class="main-section__right-finance right-finance">
@@ -53,7 +53,24 @@
         </div>
         <div class="container main-section__functions">
             <div class="functions__flex">
-                
+                <div class="functions__flex__one">
+                    <img src="./icons/graphics.png" alt="">
+                    <p>
+                        Анализ прибыли по <br> товарам и брендам
+                    </p>
+                </div>
+                <div class="functions__flex__two">
+                    <img src="./icons/wb.png" alt="">
+                    <p>
+                        Автоматический учёт <br> доходов Wildberries
+                    </p>
+                </div>
+                <div class="functions__flex__three">
+                    <img src="./icons/rub.png" alt="">
+                    <p>
+                        От 990 рублей в месяц <br> с полным функционалом
+                    </p>
+                </div>
             </div>
         </div>
     </section>
