Разобрался с косой линией и начал делать grid со статистикой

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -48,29 +48,52 @@
                 <div class="main-section__computer-logo computer-logo">
                     <img src="./img/computer-logo.png" alt="Основное лого компютера посередине сайта" class="computer-logo__outside">
                     <img src="./img/report.png" alt="Информация внутри фото компьютера" class="computer-logo__inside">
+                    <div class="computer-logo__reg reg">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="container main-section__functions">
-            <div class="functions__flex">
-                <div class="functions__flex__one">
+    </section>
+    <section class="second-section">
+        <div class="container second-section__functions">
+            <div class="functions__flex functions_backgraund">
+                <div class="functions__flex__one functions_items">
                     <img src="./icons/graphics.png" alt="">
                     <p>
                         Анализ прибыли по <br> товарам и брендам
                     </p>
                 </div>
-                <div class="functions__flex__two">
+                <div class="functions__flex__two functions_items">
                     <img src="./icons/wb.png" alt="">
                     <p>
                         Автоматический учёт <br> доходов Wildberries
                     </p>
                 </div>
-                <div class="functions__flex__three">
+                <div class="functions__flex__three functions_items">
                     <img src="./icons/rub.png" alt="">
                     <p>
                         От 990 рублей в месяц <br> с полным функционалом
                     </p>
                 </div>
+            </div>
+        </div>
+        <div class="container second-section__basic-statistics">
+            <div class="second-section__statistics statistics">
+                <div class="statistics__left">
+                    <h3>
+
+                    </h3>
+                    <p>
+
+                    </p>                
+                </div>
+                <div class="statistics__right">
+                    <div class="statistics__right__dynamics">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="second-section__statistics reports">
             </div>
         </div>
     </section>
