Начал делать stats

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -78,22 +78,58 @@
             </div>
         </div>
         <div class="container second-section__basic-statistics">
-            <div class="second-section__statistics statistics">
-                <div class="statistics__left">
-                    <h3>
-
+            <div class="second-section__statistics cash-gaps">
+                <div class="cash-gaps__left">
+                    <h3 class="cash-gaps__left__h3">
+                        Предотвращайте кассовые разрывы
                     </h3>
-                    <p>
-
+                    <p class="cash-gaps__left__p">
+                        Заранее планируйте предстоящие платежи и поступления средств. Тем самым, вы избежите неприятной ситуации с нехваткой средств на счетах
                     </p>                
                 </div>
-                <div class="statistics__right">
-                    <div class="statistics__right__dynamics">
-                        <img src="" alt="">
-                    </div>
+                <div class="cash-gaps__right">
+                    <img src="./img/cash-gaps.png" alt="Статистика" class="cash-gaps__right__img">
                 </div>
             </div>
             <div class="second-section__statistics reports">
+                <div class="reports__left">
+                    <img src="./img/report.png" alt="Отчеты о прибыли" class="reports__left__img">
+                </div>
+                <div class="reports__right">
+                    <h3 class="reports__right__h3">
+                        Отчёты о прибыли и убытках всегда под рукой
+                    </h3>
+                    <p class="reports__right__p">
+                        Получите полную информацию о состоянии вашего бизнеса, включающую все необходимые показатели для принятия правильных решений
+                    </p>
+                </div>
+            </div>
+            <div class="second-section__statistics profit">
+                <div class="profit__left">
+                    <h3 class="profit_left__h3">
+                        Какие товары приносят прибыль
+                    </h3>
+                    <p class="profit_left__p">
+                        Находите точки роста, делайте упор на рентабельные товары и увеличивайте свой доход
+                    </p>
+                </div>
+                <div class="profit__right">
+                    <img src="./img/profit.png" alt="Какие товары приносят прибыль" class="profit-right__img">
+                </div>
+            </div>
+            <div class="second-section__statistics expenses">
+                <div class="expenses__left">
+                    <img src="./img/expenses_big.png" alt="Картинка с меньшем индексом" class="expenses__right__img-big">
+                    <img src="./img/expenses_small.png" alt="Картинка с большим индексом" class="expenses__right__img-small">
+                </div>
+                <div class="expenses__right">
+                    <h3 class="expenses__right__h3">
+                        Сокращайте лишние расходы
+                    </h3>
+                    <p class="expenses__right__p">
+                        
+                    </p>
+                </div>
             </div>
         </div>
     </section>
