Доделал статистику после header

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -91,25 +91,27 @@
                     <img src="./img/cash-gaps.png" alt="Статистика" class="cash-gaps__right__img">
                 </div>
             </div>
+            <hr class="basic-statistics__hr">
             <div class="second-section__statistics reports">
                 <div class="reports__left">
-                    <img src="./img/report.png" alt="Отчеты о прибыли" class="reports__left__img">
+                    <img src="./img/report 1.png" alt="Отчеты о прибыли" class="reports__left__img">
                 </div>
                 <div class="reports__right">
                     <h3 class="reports__right__h3">
-                        Отчёты о прибыли и убытках всегда под рукой
+                        Отчёты о прибыли и <br> убытках всегда под рукой
                     </h3>
                     <p class="reports__right__p">
                         Получите полную информацию о состоянии вашего бизнеса, включающую все необходимые показатели для принятия правильных решений
                     </p>
                 </div>
             </div>
+            <hr class="basic-statistics__hr">
             <div class="second-section__statistics profit">
                 <div class="profit__left">
-                    <h3 class="profit_left__h3">
+                    <h3 class="profit__left__h3">
                         Какие товары приносят прибыль
                     </h3>
-                    <p class="profit_left__p">
+                    <p class="profit__left__p">
                         Находите точки роста, делайте упор на рентабельные товары и увеличивайте свой доход
                     </p>
                 </div>
@@ -117,17 +119,18 @@
                     <img src="./img/profit.png" alt="Какие товары приносят прибыль" class="profit-right__img">
                 </div>
             </div>
+            <hr class="basic-statistics__hr">
             <div class="second-section__statistics expenses">
                 <div class="expenses__left">
-                    <img src="./img/expenses_big.png" alt="Картинка с меньшем индексом" class="expenses__right__img-big">
-                    <img src="./img/expenses_small.png" alt="Картинка с большим индексом" class="expenses__right__img-small">
+                    <img src="./img/expenses_big.png" alt="Картинка с меньшем индексом" class="expenses__left__img-big">
+                    <img src="./img/expenses_small.png" alt="Картинка с большим индексом" class="expenses__left__img-small">
                 </div>
                 <div class="expenses__right">
                     <h3 class="expenses__right__h3">
                         Сокращайте лишние расходы
                     </h3>
                     <p class="expenses__right__p">
-                        
+                        Анализируйте расходы, убирать ненужные издержки и находите возможности повышать прибыльность бизнеса
                     </p>
                 </div>
             </div>
