Начал делать третью секцию

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -47,7 +47,7 @@
             <div class="main-section__right-finance right-finance">
                 <div class="main-section__computer-logo computer-logo">
                     <img src="./img/computer-logo.png" alt="Основное лого компютера посередине сайта" class="computer-logo__outside">
-                    <img src="./img/report.png" alt="Информация внутри фото компьютера" class="computer-logo__inside">
+                    <img src="./img/time-saving__index-0.png" alt="Информация внутри фото компьютера" class="computer-logo__inside">
                     <div class="computer-logo__reg reg">
                     </div>
                 </div>
@@ -132,6 +132,86 @@
                     <p class="expenses__right__p">
                         Анализируйте расходы, убирать ненужные издержки и находите возможности повышать прибыльность бизнеса
                     </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="third-section">
+        <div class="container third-section__time-saving">
+            <div class="third-section__title time-saving__upper-level">
+                <h2 class="time-saving__upper-level__h3">
+                    Экономьте время и нервы на учет
+                </h2>
+                <p class="time-saving__upper-level__p">
+                    Автоматическая синхронизация данных с маркетплейсов позволит вам мгновенно получать все важный показатели бизнеса на одном экране. А с помощью мобильной версии вы сможете вносить расходы всего пару кликов
+                </p>
+                <button class="time-saving__upper-level__button">
+                    <a href="#">
+                        Попробовать 14 дней бесплатно
+                    </a>
+                </button>
+            </div>
+            <div class="third-section__img time-saving__intermediate-level">
+                <img src="./img/time-saving__index-0.png" alt="Первое фото индекс 0" class="time-saving__intermediate-level__index-0">
+                <img src="./img/time-saving__index1.png" alt="Второе фото индекс 1" class="time-saving__intermediate-level__index-1">
+                <img src="./" alt="Иконка посередине индекс 2" class="time-saving__intermediate-level__index-2">
+            </div>
+            <div class="third-section__flex comparison-with-excel">
+                <div class="comparison-with-excel__left-wrapper">
+                    <ul class="excel-and-finio">
+                        <li class="excel__li">
+                            <img src="" alt="" class="excel__li__img">
+                            <p class="excel__li__p">
+
+                            </p>
+                        </li>
+                        <li class="excel__li">
+                            <img src="" alt="" class="excel__li__img">
+                            <p class="excel__li__p">
+
+                            </p>
+                        </li>
+                        <li class="excel__li">
+                            <img src="" alt="" class="excel__li__img">
+                            <p class="excel__li__p">
+
+                            </p>
+                        </li>
+                        <li class="excel__li">
+                            <img src="" alt="" class="excel__li__img">
+                            <p class="excel__li__p">
+
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="comparison-with-excel__right-wrapper">
+                    <ul class="excel-and-finio">
+                        <li class="finio__li">
+                            <img src="" alt="" class="finio__li__img">
+                            <p class="finio__li__p">
+
+                            </p>
+                        </li>
+                        <li class="finio__li">
+                            <img src="" alt="" class="finio__li__img">
+                            <p class="finio__li__p">
+
+                            </p>
+                        </li>
+                        <li class="finio__li">
+                            <img src="" alt="" class="finio__li__img">
+                            <p class="finio__li__p">
+
+                            </p>
+                        </li>
+                        <li class="finio__li">
+                            <img src="" alt="" class="finio__li__img">
+                            <p class="finio__li__p">
+
+                            </p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
