--- a/final/src/index.html
+++ b/final/src/index.html
@@ -143,7 +143,7 @@
                     Экономьте время и нервы на учет
                 </h2>
                 <p class="time-saving__upper-level__p">
-                    Автоматическая синхронизация данных с маркетплейсов позволит вам мгновенно получать все важный показатели бизнеса на одном экране. А с помощью мобильной версии вы сможете вносить расходы всего пару кликов
+                    Автоматическая синхронизация данных с маркетплейсов позволит вам мгновенно получать все важный показатели бизнеса на <br> одном экране. А с помощью мобильной версии вы сможете вносить расходы всего пару кликов
                 </p>
                 <button class="time-saving__upper-level__button">
                     <a href="#">
@@ -154,33 +154,38 @@
             <div class="third-section__img time-saving__intermediate-level">
                 <img src="./img/time-saving__index-0.png" alt="Первое фото индекс 0" class="time-saving__intermediate-level__index-0">
                 <img src="./img/time-saving__index1.png" alt="Второе фото индекс 1" class="time-saving__intermediate-level__index-1">
-                <img src="./" alt="Иконка посередине индекс 2" class="time-saving__intermediate-level__index-2">
+                <img src="./img/time-saving__icon.png" alt="Иконка посередине индекс 2" class="time-saving__intermediate-level__index-2">
+                <img src="./icons/time-saving__left.png" alt="Левая стрелка для иконки" class="time-saving__intermediate-level__icon-left-3">
+                <img src="./icons/time-saving__right.png" alt="Правая стрелка для иконки" class="time-saving__intermediate-level__icon-right-3">
             </div>
             <div class="third-section__flex comparison-with-excel">
                 <div class="comparison-with-excel__left-wrapper">
                     <ul class="excel-and-finio">
                         <li class="excel__li">
-                            <img src="" alt="" class="excel__li__img">
+                            <img src="./icons/excel-logo.png" alt="Иконка excel для флекса" class="excel__li__logo-excel">
+                        </li>
+                        <li class="excel__li">
+                            <img src="./icons/exclamation-point.png" alt="минусы" class="excel__li__img">
                             <p class="excel__li__p">
-
+                                Долгое внесение данных
                             </p>
                         </li>
                         <li class="excel__li">
-                            <img src="" alt="" class="excel__li__img">
+                            <img src="./icons/exclamation-point.png" alt="минусы" class="excel__li__img">
                             <p class="excel__li__p">
-
+                                Ручной ввод данных с маркетплейсов
                             </p>
                         </li>
                         <li class="excel__li">
-                            <img src="" alt="" class="excel__li__img">
+                            <img src="./icons/exclamation-point.png" alt="минусы" class="excel__li__img">
                             <p class="excel__li__p">
-
+                                Не удобная работа с телефона
                             </p>
                         </li>
                         <li class="excel__li">
-                            <img src="" alt="" class="excel__li__img">
+                            <img src="./icons/exclamation-point.png" alt="минусы" class="excel__li__img">
                             <p class="excel__li__p">
-
+                                Сложность восприятия итоговых данных
                             </p>
                         </li>
                     </ul>
@@ -188,27 +193,30 @@
                 <div class="comparison-with-excel__right-wrapper">
                     <ul class="excel-and-finio">
                         <li class="finio__li">
-                            <img src="" alt="" class="finio__li__img">
+                            <img src="./icons/FINIO-icon.png" alt="Лого FINIO для флекса" class="finio__li__logo-finio">
+                        </li>
+                        <li class="finio__li">
+                            <img src="./icons/tick.png" alt="галочка" class="finio__li__img">
                             <p class="finio__li__p">
-
+                                Внесение данных за пару кликов
                             </p>
                         </li>
                         <li class="finio__li">
-                            <img src="" alt="" class="finio__li__img">
+                            <img src="./icons/tick.png" alt="галочка" class="finio__li__img">
                             <p class="finio__li__p">
-
+                                Автоматическое получение данных по API
                             </p>
                         </li>
                         <li class="finio__li">
-                            <img src="" alt="" class="finio__li__img">
+                            <img src="./icons/tick.png" alt="галочка" class="finio__li__img">
                             <p class="finio__li__p">
-
+                                Удобная мобильная версия
                             </p>
                         </li>
                         <li class="finio__li">
-                            <img src="" alt="" class="finio__li__img">
+                            <img src="./icons/tick.png" alt="галочка" class="finio__li__img">
                             <p class="finio__li__p">
-
+                                Наглядные отчеты, графики и таблицы
                             </p>
                         </li>
                     </ul>
