доделал иконки, начал делать advantages

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -48,7 +48,7 @@
                 <div class="main-section__computer-logo computer-logo">
                     <img src="./img/computer-logo.png" alt="Основное лого компютера посередине сайта" class="computer-logo__outside">
                     <img src="./img/time-saving__index-0.png" alt="Информация внутри фото компьютера" class="computer-logo__inside">
-                    <div class="computer-logo__reg reg">
+                    <div class="main-section__reg reg">
                     </div>
                 </div>
             </div>
@@ -220,6 +220,45 @@
                             </p>
                         </li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="fourth-section">
+        <div class="container fourth-section__advantages">
+            <div class="advantages-flex">
+                <div class="advantages-flex__servers servers">
+                    <div class="servers__img">
+                        <img src="./icons/servers-img-cloud.png" alt="картинка сервера" class="servers__img-index-1">
+                    </div>
+                    <h3 class="servers__h3">
+                        Надёжные сервера на территории России
+                    </h3>
+                    <p class="servers__p">
+                        Никакие события не скажутся на бесперебойной работе сервиса.
+                    </p>
+                </div>
+                <div class="advantages-flex__encryption encryption">
+                    <div class="encryption__img">
+                        <img src="./icons/encryption-icons.png" alt="картинка щита" class="encryption__img-shield">
+                    </div>
+                    <h3 class="encryption__h3">
+                        Используем 256-битное SSL-шифрование
+                    </h3>
+                    <p class="encryption__p">
+                        Ваши данные не могут быть перехвачены, даже при использовании открытых Wi-Fi сетей
+                    </p>
+                </div> 
+                <div class="advantages-flex__data-protection">
+                    <div class="data-protection__img">
+                        <img src="./icons/data-protection-icons.png" alt="иконка, что аккаунт под защитой" class="data-protection__img-castle">
+                    </div>
+                    <h3 class="data-protection__h3">
+                        Не передаём ваши данные 3-им лицам
+                    </h3>
+                    <p class="data-protection__p">
+                        Все данные о доходах и расходах компании видны только вам и тем, кому вы открыли доступ
+                    </p>
                 </div>
             </div>
         </div>
